@@ -2,6 +2,7 @@ iowow (1.3.6) UNRELEASED; urgency=medium
 
   * BUG: Memory leak in `iwkv_cursor_open` on error (#21)
   * BUG: `iwxstr_new2()` with zero size argument causes illegal memory write (#20)
+  * Added `iwkv_cursor_seth()` record update handle supported by `iwkv_cursor_set`
 
  -- Anton Adamansky <adamansky@gmail.com>  Thu, 21 Mar 2019 09:40:38 +0700
 
